unpackaged/main/default/objects/Broker_Interest_Forms__c/Broker_Interest_Forms__c.object-meta.xml
<CustomObject>
    <label>Broker Interest Form</label>
    <nameField>
        <displayFormat>BrokerForm-{000000}</displayFormat>
        <label>Broker Interest Forms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Interest Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>