unpackaged/main/default/objects/Broker_Interest_Forms__c/fields/Broker_Interest_Form__c.field-meta.xml
<CustomField>
    <fullName>Broker_Interest_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Interest Form</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Interest Forms</relationshipLabel>
    <relationshipName>Broker_Interest_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>