unpackaged/main/default/objects/Broker_Interest_Forms__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>